[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/menu_ui/start_menu.gd" type="Script" id=1]
[ext_resource path="res://asset/img/ui/grey2_bg.res" type="Texture" id=2]
[ext_resource path="res://asset/img/font/mago1_144.res" type="DynamicFont" id=3]
[ext_resource path="res://asset/img/ui/brown_button.res" type="Texture" id=4]
[ext_resource path="res://asset/img/ui/brown_button_pressed.res" type="Texture" id=5]
[ext_resource path="res://src/menu_ui/save_load.tscn" type="PackedScene" id=6]
[ext_resource path="res://asset/img/font/mago1_96.res" type="DynamicFont" id=7]
[ext_resource path="res://asset/img/ui/theme.res" type="Theme" id=8]
[ext_resource path="res://src/menu_ui/about.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/menu_ui/popup.tscn" type="PackedScene" id=10]

[node name="start_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.264706 )

[node name="list_of_menus" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="bg" type="TextureRect" parent="list_of_menus"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
texture = ExtResource( 2 )
expand = true

[node name="m" type="MarginContainer" parent="list_of_menus"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="main_menu" type="Container" parent="list_of_menus/m"]
editor/display_folded = true
margin_left = 50.0
margin_top = 50.0
margin_right = 570.0
margin_bottom = 1130.0

[node name="v" type="VBoxContainer" parent="list_of_menus/m/main_menu"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v"]
margin_right = 520.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Tides of
War"
align = 1
valign = 1

[node name="new_game" type="TextureButton" parent="list_of_menus/m/main_menu/v"]
editor/display_folded = true
margin_top = 235.0
margin_right = 520.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v/new_game"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "New Game"
align = 1
valign = 1

[node name="load" type="TextureButton" parent="list_of_menus/m/main_menu/v"]
editor/display_folded = true
margin_top = 404.0
margin_right = 520.0
margin_bottom = 569.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v/load"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Load"
align = 1
valign = 1

[node name="settings" type="TextureButton" parent="list_of_menus/m/main_menu/v"]
editor/display_folded = true
margin_top = 573.0
margin_right = 520.0
margin_bottom = 738.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v/settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Settings"
align = 1
valign = 1

[node name="about" type="TextureButton" parent="list_of_menus/m/main_menu/v"]
editor/display_folded = true
margin_top = 742.0
margin_right = 520.0
margin_bottom = 907.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v/about"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "About"
align = 1
valign = 1

[node name="exit" type="TextureButton" parent="list_of_menus/m/main_menu/v"]
editor/display_folded = true
margin_top = 911.0
margin_right = 520.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="list_of_menus/m/main_menu/v/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Exit"
align = 1
valign = 1

[node name="save_load" parent="list_of_menus/m" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 570.0
margin_bottom = 1130.0

[node name="settings" type="Container" parent="list_of_menus/m"]
editor/display_folded = true
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 570.0
margin_bottom = 1130.0

[node name="v" type="VBoxContainer" parent="list_of_menus/m/settings"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="label" type="Label" parent="list_of_menus/m/settings/v"]
margin_right = 520.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Settings"
align = 1

[node name="v" type="VBoxContainer" parent="list_of_menus/m/settings/v"]
margin_top = 118.0
margin_right = 520.0
margin_bottom = 976.0
size_flags_vertical = 3
alignment = 1

[node name="TextureButton" type="TextureButton" parent="list_of_menus/m/settings/v/v"]
editor/display_folded = true
margin_top = 248.0
margin_right = 520.0
margin_bottom = 348.0
rect_min_size = Vector2( 380, 100 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="list_of_menus/m/settings/v/v/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Controls"
align = 1
valign = 1

[node name="TextureButton4" type="TextureButton" parent="list_of_menus/m/settings/v/v"]
margin_top = 352.0
margin_right = 520.0
margin_bottom = 452.0
rect_min_size = Vector2( 380, 100 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="list_of_menus/m/settings/v/v/TextureButton4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Music"
align = 1
valign = 1

[node name="TextureButton5" type="TextureButton" parent="list_of_menus/m/settings/v/v"]
margin_top = 456.0
margin_right = 520.0
margin_bottom = 556.0
rect_min_size = Vector2( 380, 100 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="list_of_menus/m/settings/v/v/TextureButton5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Sound FX"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="list_of_menus/m/settings/v/v"]
margin_top = 560.0
margin_right = 520.0
margin_bottom = 610.0

[node name="ProgressBar" type="ProgressBar" parent="list_of_menus/m/settings/v/v/HBoxContainer"]
margin_right = 440.0
margin_bottom = 50.0
rect_min_size = Vector2( 440, 0 )
theme = ExtResource( 8 )
step = 1.0
value = 40.0

[node name="back" type="TextureButton" parent="list_of_menus/m/settings/v"]
margin_top = 980.0
margin_right = 520.0
margin_bottom = 1080.0
rect_min_size = Vector2( 380, 100 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="label" type="Label" parent="list_of_menus/m/settings/v/back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
text = "Back"
align = 1
valign = 1

[node name="about" parent="list_of_menus/m" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 570.0
margin_bottom = 1130.0

[node name="popup" parent="." instance=ExtResource( 10 )]

[connection signal="pressed" from="list_of_menus/m/main_menu/v/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="list_of_menus/m/main_menu/v/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="list_of_menus/m/main_menu/v/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="list_of_menus/m/main_menu/v/about" to="." method="_on_about_pressed"]
[connection signal="pressed" from="list_of_menus/m/main_menu/v/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="list_of_menus/m/settings/v/back" to="." method="_on_back_pressed"]
